#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(uni, 0.1, chentianran@user.sourceforge.net)
AC_CONFIG_AUX_DIR([./config])
AC_CONFIG_SRCDIR([src/term.hh])
AM_INIT_AUTOMAKE([uni,0.1])

AC_LIBTOOL_DLOPEN

# Checks for programs.
AC_PROG_CXX
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_LIBTOOL

AC_LANG(C++)

# Checks for libraries.
AC_CHECK_LIB(curses,main,,[AC_MSG_ERROR([Curses not found.])])
AC_CHECK_LIB(readline,main,,[AC_MSG_ERROR([GNU Readline not found.])])
AC_CHECK_LIB(dl,dlopen,,[AC_MSG_ERROR([libdl not found.])])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST

# Checks for library functions.
AC_CONFIG_FILES([Makefile src/Makefile shell/Makefile scanners/Makefile])
AC_OUTPUT
