AM_YFLAGS = -d
AM_LFLAGS = -olex.yy.c
AM_CXXFLAGS = -g -O0 -Wall -Werror -Wno-unused-label -Wno-unused-function -DDEBUG

lib_LTLIBRARIES = libuni.la

libuni_la_SOURCES = app.hh \
		app.cc \
		abs.hh \
		abs.cc \
		basicdef.hh \
		bool.hh \
		bool.cc \
		builtin.hh \
		builtin.cc \
		cons.hh \
		cons.cc \
		context.hh \
		context.cc \
		cval.hh \
		cval.cc \
		dict.hh \
		dict.cc \
		exception.hh \
		exception.cc \
		family.hh \
		family.cc \
		frame.hh \
		frame.cc \
		func.hh \
		func.cc \
		int.hh \
		int.cc \
		list.hh \
		list.cc \
		my_view_handler.hh \
		my_view_handler.cc \
		opt.hh \
		opt.cc \
		proj.hh \
		proj.cc \
		raw.hh \
		raw.cc \
		reflection.hh \
		reflection.cc \
		scanner.hh \
		scanner.cc \
		scope.hh \
		scope.cc \
		seq.hh \
		seq.cc \
		string.hh \
		string.cc \
		sym.hh \
		sym.cc \
		temp.hh \
		temp.cc \
		term.hh \
		term.cc \
		tok.hh \
		tok.cc \
		tree.hh \
		tree.cc \
		type.hh \
		type.cc \
		typdef.hh \
		utils.hh \
		utils.cc
